tests/fail/nested_unavailable_function.err
Semantic Error: Calling an undefined function b at line 12.
